@@ -1,3 +1,8 @@
+2004-09-28  Boris Kolpackov  <boris@kolpackov.net>
+
+	* remake.c (update_file_1): When rebuilding makefiles inherit
+	dontcare flag from a target that triggered update.
+
 2004-09-27  Boris Kolpackov  <boris@kolpackov.net>
 
 	* variable.c (initialize_file_variables): Mark pattern-specific
